# rust-scissors-rock-paper

./: Cargo.toml  readme.md
assets/: index.html  script.js
src/: main.rs
src/client/: client.rs
src/server/: game.rs  logic.rs  player.rs  server.rs
