[package]
name = "scissors-rock-paper"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
axum = { version = "0.6.4", features = ["ws", "headers"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.92"

[[bin]]
name = "server-websockets"
path = "src/server/server.rs"

[[bin]]
name = "client-websockets"
path = "src/client/client.rs"